# pfauterminal

./: Cargo.toml  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
resources/macos/: Info.plist
resources/macos/en.lproj/: InfoPlist.strings
resources/macos/ru.lproj/: InfoPlist.strings
src/: app.rs  colors.rs  draw.rs  dropdown.rs  font.rs  gpu.rs  hotkeys.rs  icons.rs  layout.rs  main.rs  menu.rs  panel.rs  renderer.rs  saved_sessions.rs  ssh.rs  ssh_config.rs  ssh_dialog.rs  tab_bar.rs  terminal.rs  terminal_panel.rs  theme.rs  widgets.rs  workspace.rs
src/panels/: terminal.rs
