[package]
name = "pfauterminal"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "23.0"
glyphon = "0.7"
alacritty_terminal = "0.25"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
resvg = "0.44"
png = "0.17"
log = "0.4"
env_logger = "0.11"
arboard = "3"
russh = "0.48"
russh-keys = "0.48"
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }
dirs = "6"
async-trait = "0.1"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
